kubernetes/monitoring/unifi/stateful-set.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: unifi-controller
spec:
  serviceName: unifi
  replicas: 1
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
        - name: unifi-controller
          image: jacobalberty/unifi:v7.5.174
          imagePullPolicy: IfNotPresent
          ports:
            - name: dev-comm
              containerPort: 8080
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: default-console
              containerPort: 8443
              protocol: TCP
            - name: speedtest
              containerPort: 6789
              protocol: TCP
            - name: ap-discovery
              containerPort: 10001
              protocol: UDP
            - name: discovery-l2
              containerPort: 1900
              protocol: UDP
          resources:
            requests:
              cpu: "150m"
              memory: "1024Mi"
            limits:
              cpu: "512m"
              memory: "2048Mi"
          volumeMounts:
            - name: unifi-data
              mountPath: /unifi/data
            - name: unifi-certificate
              mountPath: /unifi/cert
      volumes:
        - name: unifi-data
          persistentVolumeClaim:
            claimName: unifi-pvc
        - name: unifi-certificate
          secret:
            secretName: unifi-certificate
